force-app/main/default/objects/SBQQ__Quote__c/fields/ACV__c.field-meta.xml
<CustomField>
        <fullName>ACV__c</fullName>
        <description>Annual Contract Value for the Quote</description>
        <inlineHelpText>Annual Contract Value for the Quote</inlineHelpText>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>