force-app/main/default/objects/SBQQ__Quote__c/fields/ACV_Equivalent_Discount_excl_RA__c.field-meta.xml
<CustomField>
    <fullName>ACV_Equivalent_Discount_excl_RA__c</fullName>
    <formula>ABS(if(ACV_Equivalent_List_Price_excl_RA__c = 0 || isBlank(ACV_Equivalent_List_Price_excl_RA__c), 0, 
		(ACV_Equivalent_Quote_Price_excl_RA__c -  ACV_Equivalent_List_Price_excl_RA__c) / ACV_Equivalent_List_Price_excl_RA__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Equivalent Discount (excl RA)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>