force-app/main/default/objects/SBQQ__Quote__c/fields/ACV_Equivalent_List_Price_excl_RA__c.field-meta.xml
<CustomField>
        <fullName>ACV_Equivalent_List_Price_excl_RA__c</fullName>
        <label>ACV Equivalent List Price (excl RA)</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>