force-app/main/default/objects/SBQQ__Quote__c/fields/Add_on_Sales_Recurring_Rev_List_Price__c.field-meta.xml
<CustomField>
        <fullName>Add_on_Sales_Recurring_Rev_List_Price__c</fullName>
        <description>This is the Add-on Sale Recurring Revenue in the currency of this quote.</description>
        <label>Add-on Sales Recurring Rev List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>