force-app/main/default/objects/SBQQ__Quote__c/fields/Add_on_Sales_RR_List_at_USD_Budget_Rate__c.field-meta.xml
<CustomField>
    <fullName>Add_on_Sales_RR_List_at_USD_Budget_Rate__c</fullName>
    <description>Add-on Sales Recurring Rev List Price at USD Budget Rate

Please input the recurring fees list price of additional product/module/volume in USD at budget rate that you added to this renewal/license restructure deal.</description>
    <inlineHelpText>Add-on Sales Recurring Rev List Price at USD Budget Rate

Please input the recurring fees list price of additional product/module/volume in USD at budget rate that you added to this renewal/license restructure deal.</inlineHelpText>
    <label>Add-on Sales RR List at USD Budget Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>