force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Amt__c.field-meta.xml
<CustomField>
        <fullName>Additional_Amt__c</fullName>
        <description>This field holds an additional discount value.</description>
        <inlineHelpText>This field holds an additional discount value.</inlineHelpText>
        <label>Additional Amt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>