force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Increase__c.field-meta.xml
<CustomField>
        <fullName>Additional_Increase__c</fullName>
        <inlineHelpText>Please enter amount in % e.g. 5% if you would like the increase is local CPI +5%. Any value less than 3% here will trigger approval rule</inlineHelpText>
        <label>Additional % Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>