force-app/main/default/objects/SBQQ__Quote__c/fields/Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
        <fullName>Annual_Recurring_Revenue__c</fullName>
        <label>Annual Recurring Revenue</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>