force-app/main/default/objects/SBQQ__Quote__c/fields/Any_changes_to_reduce_current_CPI_term__c.field-meta.xml
<CustomField>
        <fullName>Any_changes_to_reduce_current_CPI_term__c</fullName>
        <label>Any changes to reduce current CPI term?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>