force-app/main/default/objects/SBQQ__Quote__c/fields/Apply_Standard_CPI__c.field-meta.xml
<CustomField>
        <fullName>Apply_Standard_CPI__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Apply Standard CPI</label>
        <type>Checkbox</type>
    </CustomField>