force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Budget_Rate_ACV__c.field-meta.xml
<CustomField>
    <fullName>Approval_Budget_Rate_ACV__c</fullName>
    <formula>Round(NULLVALUE(ACV__c, 1)
/ IF(Budget_Rate__c == 0 || ISBLANK(Budget_Rate__c), 1,Budget_Rate__c),2)</formula>
    <label>Approval Budget Rate ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>