force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <label>Approval Comments</label>
    <length>4000</length>
    <type>Html</type>
</CustomField>