force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Hierarchy__c.field-meta.xml
<CustomField>
        <fullName>Approval_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Test and demo field.</description>
        <label>Approval Hierarchy?</label>
        <type>Checkbox</type>
    </CustomField>