force-app/main/default/objects/SBQQ__Quote__c/fields/ApprovalsArchived__c.field-meta.xml
<CustomField>
        <fullName>ApprovalsArchived__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ApprovalsArchived</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>