force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_to_Contact__c.field-meta.xml
<CustomField>
        <fullName>Bill_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.SBQQ__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes (Bill to Contact)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </CustomField>