force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Contact_Title__c.field-meta.xml
<CustomField>
        <fullName>Bill_To_Contact_Title__c</fullName>
        <formula>Bill_to_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Contact Title</label>
        <type>Text</type>
    </CustomField>