force-app/main/default/objects/SBQQ__Quote__c/fields/Budget_Rate__c.field-meta.xml
<CustomField>
        <fullName>Budget_Rate__c</fullName>
        <description>Calculated based on the pricing region field and the currency</description>
        <inlineHelpText>Calculated based on the pricing region field and the currency</inlineHelpText>
        <label>Budget Rate</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>