force-app/main/default/objects/SBQQ__Quote__c/fields/Budget_Rate_ACV__c.field-meta.xml
<CustomField>
    <fullName>Budget_Rate_ACV__c</fullName>
    <description>Used for approvals and reporting. USD ACV Equivalent at the Budget Rate.</description>
    <formula>&quot;USD&quot; &amp;&quot; &quot;&amp; TEXT(Round(NULLVALUE(ACV__c, 1)
/ IF(Budget_Rate__c == 0 || ISBLANK(Budget_Rate__c), 1,Budget_Rate__c),2))</formula>
    <inlineHelpText>Used for approvals and reporting. USD ACV Equivalent at the Budget Rate.</inlineHelpText>
    <label>Budget Rate ACV</label>
    <type>Text</type>
</CustomField>