force-app/main/default/objects/SBQQ__Quote__c/fields/Budget_Rate_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Rate_Discount_Amount__c</fullName>
    <description>Used for approvals and reporting. USD Discount Amount Equivalent at the Budget Rate.</description>
    <formula>&quot;USD&quot; &amp;&quot; &quot;&amp; TEXT(Round(NULLVALUE(SBQQ__AdditionalDiscountAmount__c, 1)
/ IF(Budget_Rate__c == 0 || ISBLANK(Budget_Rate__c), 1,Budget_Rate__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for approvals and reporting. USD Discount Amount Equivalent at the Budget Rate.</inlineHelpText>
    <label>Budget Rate Discount Amount</label>
    <type>Text</type>
</CustomField>