force-app/main/default/objects/SBQQ__Quote__c/fields/Budget_Rate_List_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Rate_List_Amount__c</fullName>
    <description>Used for approvals and reporting. USD List Amount Equivalent at the Budget Rate.</description>
    <formula>&quot;USD&quot; &amp;&quot; &quot;&amp; TEXT(Round(NULLVALUE(SBQQ__ListAmount__c, 1) 
/ IF(Budget_Rate__c == 0 || ISBLANK(Budget_Rate__c), 1,Budget_Rate__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>USD Equivalent List Price at the Budget Rate. If the Quote currency is USD, this value will match the List Amount field.</inlineHelpText>
    <label>Budget Rate List Amount</label>
    <type>Text</type>
</CustomField>