force-app/main/default/objects/SBQQ__Quote__c/fields/Bypass_Approval__c.field-meta.xml
<CustomField>
        <fullName>Bypass_Approval__c</fullName>
        <label>DEL Bypass Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>