force-app/main/default/objects/SBQQ__Quote__c/fields/Bypass_Approval_Accepted__c.field-meta.xml
<CustomField>
        <fullName>Bypass_Approval_Accepted__c</fullName>
        <formula>IF(TEXT( Bypass_Approval__c ) = &quot;Accepted&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEL Bypass Approval Accepted?</label>
        <type>Checkbox</type>
    </CustomField>