force-app/main/default/objects/SBQQ__Quote__c/fields/Bypass_Approval_Request_Sent__c.field-meta.xml
<CustomField>
        <fullName>Bypass_Approval_Request_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEL Bypass Approval Request Sent?</label>
        <type>Checkbox</type>
    </CustomField>