force-app/main/default/objects/SBQQ__Quote__c/fields/Calcu_Additional_Amt_to_Additional__c.field-meta.xml
<CustomField>
    <fullName>Calcu_Additional_Amt_to_Additional__c</fullName>
    <formula>IF( AND(NOT(ISBLANK(Additional_Amt__c)), NOT(ISBLANK(SBQQ__ListAmount__c))),
Additional_Amt__c/SBQQ__ListAmount__c,
NULL)</formula>
    <label>Calcu. Additional Amt to Additional %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>