force-app/main/default/objects/SBQQ__Quote__c/fields/Calculated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_End_Date__c</fullName>
    <formula>IF(NOT(ISBLANK(SBQQ__EndDate__c)), 
SBQQ__EndDate__c, 
DATE( 
/*YEAR*/ 
YEAR(SBQQ__StartDate__c) + FLOOR((MONTH(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c- 1)/12), 

/*MONTH*/ 
CASE(MOD(MONTH(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c, 12 ), 0, 12, MOD(MONTH(SBQQ__StartDate__c)+ SBQQ__SubscriptionTerm__c, 12 )), 

/*DAY*/ 
MIN(DAY(SBQQ__StartDate__c), CASE(MOD(MONTH(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c,12), 
9, 30, 
4, 30, 
6, 30, 
11, 30, 
2, 

/* return max days for February dependent on if end date is leap year */ 
IF(MOD(YEAR(SBQQ__StartDate__c) + FLOOR((MONTH(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c)/12), 400) = 0 
|| (MOD(YEAR(SBQQ__StartDate__c) + FLOOR((MONTH(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c)/12), 4) = 0 
&amp;&amp; MOD(YEAR(SBQQ__StartDate__c) + FLOOR((MONTH(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c)/12), 100) &lt;&gt; 0 ), 
29, 
28), 
31)) ) - 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated End Date</label>
    <type>Date</type>
</CustomField>