force-app/main/default/objects/SBQQ__Quote__c/fields/Calculated_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Total_Discount__c</fullName>
    <formula>IF(SBQQ__AdditionalDiscountAmount__c &gt;0,(SBQQ__AdditionalDiscountAmount__c / SBQQ__RegularAmount__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Total Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>