force-app/main/default/objects/SBQQ__Quote__c/fields/CG_Custom_Source_Code_Escrow__c.field-meta.xml
<CustomField>
        <fullName>CG_Custom_Source_Code_Escrow__c</fullName>
        <description>If an order contains a SKU for custom source code escrow, the order must include the custom source code escrow provision.</description>
        <inlineHelpText>If an order contains a SKU for custom source code escrow, the order must include the custom source code escrow provision.</inlineHelpText>
        <label>CG Custom Source Code Escrow</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>