force-app/main/default/objects/SBQQ__Quote__c/fields/CG_DepositPro_Compliance_Warranty__c.field-meta.xml
<CustomField>
        <fullName>CG_DepositPro_Compliance_Warranty__c</fullName>
        <description>A DepositPro order must include the then-current DepositPro Compliance Warranty.</description>
        <inlineHelpText>A DepositPro order must include the then-current DepositPro Compliance Warranty.</inlineHelpText>
        <label>CG DepositPro Compliance Warranty</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>