force-app/main/default/objects/SBQQ__Quote__c/fields/CG_DSI_LOS_EULA__c.field-meta.xml
<CustomField>
        <fullName>CG_DSI_LOS_EULA__c</fullName>
        <description>If a Mortgagebot order includes the DocMagic document set, the order must include the DSI LOS End User License Agreement.</description>
        <inlineHelpText>If a Mortgagebot order includes the DocMagic document set, the order must include the DSI LOS End User License Agreement.</inlineHelpText>
        <label>CG DSI LOS EULA</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>