force-app/main/default/objects/SBQQ__Quote__c/fields/CG_LaserPro_Commercial_Participation_Wty__c.field-meta.xml
<CustomField>
        <fullName>CG_LaserPro_Commercial_Participation_Wty__c</fullName>
        <description>If LaserPro also includes Commercial Participation, it must also include the then-current LaserPro Participation Compliance Warranty.</description>
        <inlineHelpText>If LaserPro also includes Commercial Participation, it must also include the then-current LaserPro Participation Compliance Warranty.</inlineHelpText>
        <label>CG LaserPro Commercial Participation Wty</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>