force-app/main/default/objects/SBQQ__Quote__c/fields/CG_LaserPro_Compliance_Warranty__c.field-meta.xml
<CustomField>
        <fullName>CG_LaserPro_Compliance_Warranty__c</fullName>
        <description>A LaserPro order must include the then-current LaserPro Compliance Warranty.</description>
        <inlineHelpText>A LaserPro order must include the then-current LaserPro Compliance Warranty.</inlineHelpText>
        <label>CG LaserPro Compliance Warranty</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>