force-app/main/default/objects/SBQQ__Quote__c/fields/CG_Lender_License__c.field-meta.xml
<CustomField>
        <fullName>CG_Lender_License__c</fullName>
        <description>For New LB and separate orders must be generated for each FI being served by the service organization, those orders must include the Master Agreement and the Lender License for LaserPro.</description>
        <inlineHelpText>For New LB and separate orders must be generated for each FI being served by the service organization, those orders must include the Master Agreement and the Lender License for LaserPro.</inlineHelpText>
        <label>CG Lender License</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>