force-app/main/default/objects/SBQQ__Quote__c/fields/CG_Loan_Processing_Addendum__c.field-meta.xml
<CustomField>
        <fullName>CG_Loan_Processing_Addendum__c</fullName>
        <description>If Total Lending (or LaserPro) is being operated for the benefit of multiple FI&apos;s in a cooperative environment (e.g. a service organization), the order must include the Loan Processing Addendum.</description>
        <inlineHelpText>If Total Lending (or LaserPro) is being operated for the benefit of multiple FI&apos;s in a cooperative environment (e.g. a service organization), the order must include the Loan Processing Addendum.</inlineHelpText>
        <label>CG Loan Processing Addendum</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>