force-app/main/default/objects/SBQQ__Quote__c/fields/CG_Source_Code_Escrow_Provision__c.field-meta.xml
<CustomField>
        <fullName>CG_Source_Code_Escrow_Provision__c</fullName>
        <description>If an order contains a SKU for standard source code escrow, the order must include the standard source code escrow provision.</description>
        <inlineHelpText>If an order contains a SKU for standard source code escrow, the order must include the standard source code escrow provision.</inlineHelpText>
        <label>CG Source Code Escrow Provision</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>