force-app/main/default/objects/SBQQ__Quote__c/fields/Cloud_SUB__c.field-meta.xml
<CustomField>
        <fullName>Cloud_SUB__c</fullName>
        <inlineHelpText>&quot;HOSS ILHS ILHM x xx&quot;</inlineHelpText>
        <label>Cloud SUB</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>