force-app/main/default/objects/SBQQ__Quote__c/fields/CM_Discount_Total__c.field-meta.xml
<CustomField>
        <fullName>CM_Discount_Total__c</fullName>
        <description>Summary of all CM discounts from the Quote Lines.</description>
        <inlineHelpText>Summary of all CM discounts from the Quote Lines.</inlineHelpText>
        <label>CM Discount $ Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>