force-app/main/default/objects/SBQQ__Quote__c/fields/Conga_Error_Message__c.field-meta.xml
<CustomField>
        <fullName>Conga_Error_Message__c</fullName>
        <inlineHelpText>Message inserted by a process builder to appear as the conga error message.</inlineHelpText>
        <label>Conga Error Message</label>
        <type>TextArea</type>
    </CustomField>