force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Reviewed__c.field-meta.xml
<CustomField>
        <fullName>Contract_Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To be checked by Brina&apos;s team after reviewing a quote contract with a Deal Type that is NOT &quot;Volume Increase&quot; or &quot;Up-sell&quot;.</inlineHelpText>
        <label>Contract Reviewed</label>
        <type>Checkbox</type>
    </CustomField>