force-app/main/default/objects/SBQQ__Quote__c/fields/Coterminous__c.field-meta.xml
<CustomField>
        <fullName>Coterminous__c</fullName>
        <formula>IF(NOT(ISBLANK(SBQQ__Opportunity2__r.SBQQ__AmendedContract__c)),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coterminous</label>
        <type>Checkbox</type>
    </CustomField>