force-app/main/default/objects/SBQQ__Quote__c/fields/CPI_Index_Type__c.field-meta.xml
<CustomField>
    <fullName>CPI_Index_Type__c</fullName>
    <inlineHelpText>No Increase: No CPI increase should apply
CAP: Finastra Standard rate should apply but apply specified CPI as CAP
FIX: Specified CPI should apply
None: CPI increase is a fixed rate e.g. 5%. (indicate 5% as min and max below).</inlineHelpText>
    <label>CPI Index Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>FIX</fullName>
            </value>
            <value>
                <fullName>No Increase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>