force-app/main/default/objects/SBQQ__Quote__c/fields/Current_Date__c.field-meta.xml
<CustomField>
        <fullName>Current_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Date</label>
        <type>Date</type>
    </CustomField>