force-app/main/default/objects/SBQQ__Quote__c/fields/Deal_Summary_Pricing_Rationale__c.field-meta.xml
<CustomField>
        <fullName>Deal_Summary_Pricing_Rationale__c</fullName>
        <description>Please provide pricing rationale and summary of the deal.</description>
        <inlineHelpText>Please provide pricing rationale and summary of the deal. This information will be sent to Approvers.</inlineHelpText>
        <label>Deal Summary &amp; Pricing Rationale</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>