force-app/main/default/objects/SBQQ__Quote__c/fields/Deviation_from_ETF__c.field-meta.xml
<CustomField>
        <fullName>Deviation_from_ETF__c</fullName>
        <label>Deviation from ETF?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>