force-app/main/default/objects/SBQQ__Quote__c/fields/Docusign_Subject__c.field-meta.xml
<CustomField>
        <fullName>Docusign_Subject__c</fullName>
        <formula>&quot;DocuSign For &quot;+SBQQ__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Docusign Subject</label>
        <type>Text</type>
    </CustomField>