force-app/main/default/objects/SBQQ__Quote__c/fields/Docusign_Visible__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Visible__c</fullName>
    <description>This field is used in the Generate Conga Contract button to display the DocuSign button when the quote is in an approved status.</description>
    <formula>CASE(SBQQ__Status__c,
&quot;Approved&quot;,&quot;1&quot;,
&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used in the Generate Conga Contract button to display the DocuSign button when the quote is in an approved status.</inlineHelpText>
    <label>Docusign Visible</label>
    <type>Text</type>
</CustomField>