force-app/main/default/objects/SBQQ__Quote__c/fields/EditLinesFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>EditLinesFieldSetName__c</fullName>
    <formula>IF(Show_Quote_Line_Dates__c, &quot;QuoteLineDatesExposed&quot;,
IF(TEXT(SBQQ__Type__c) = &quot;Amendment&quot;, &quot;Amendment_Quote&quot;,
IF(TEXT(SBQQ__Type__c) = &quot;Renewal&quot;, &quot;Renewal_Quote&quot;,
&quot;SBQQ__LineEditor&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EditLinesFieldSetName</label>
    <type>Text</type>
</CustomField>