force-app/main/default/objects/SBQQ__Quote__c/fields/Finastra_Quote_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Finastra_Quote_Expiration_Date__c</fullName>
    <label>Finastra Quote Expiration Date</label>
    <type>Date</type>
</CustomField>