force-app/main/default/objects/SBQQ__Quote__c/fields/Future_Discount__c.field-meta.xml
<CustomField>
        <fullName>Future_Discount__c</fullName>
        <description>Any future discount? If yes, is it &gt;2years?</description>
        <inlineHelpText>Any future discount? If yes, is it &gt;2years?</inlineHelpText>
        <label>DEL. Future Discount?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes. It&apos;s less than or equal to 2 years</fullName>
                </value>
                <value>
                    <fullName>Yes. It&apos;s greater than 2 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>