force-app/main/default/objects/SBQQ__Quote__c/fields/Future_Discount_Give_Away_Sign_Bonus_2y__c.field-meta.xml
<CustomField>
        <fullName>Future_Discount_Give_Away_Sign_Bonus_2y__c</fullName>
        <label>Future Discount/Give-Away/Sign Bonus &gt;2y</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>