force-app/main/default/objects/SBQQ__Quote__c/fields/Gross_Margin_for_Project__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_for_Project__c</fullName>
    <formula>IF(

 AND(
    Total_Sale_Price_for_Project__c &gt; 0, 
    Total_Cost_Price_for_Project__c &gt; 0
   ), 

 (Total_Sale_Price_for_Project__c - Total_Cost_Price_for_Project__c) / Total_Sale_Price_for_Project__c, 
 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Margin for Project</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>