force-app/main/default/objects/SBQQ__Quote__c/fields/Hardware__c.field-meta.xml
<CustomField>
        <fullName>Hardware__c</fullName>
        <description>rollup field</description>
        <inlineHelpText>HWR</inlineHelpText>
        <label>Hardware</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>