force-app/main/default/objects/SBQQ__Quote__c/fields/Host_Processor__c.field-meta.xml
<CustomField>
        <fullName>Host_Processor__c</fullName>
        <label>Host Processor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Computer Services, Inc</fullName>
                </value>
                <value>
                    <fullName>DCI - DataCentering</fullName>
                </value>
                <value>
                    <fullName>Bankers Equipment Systems</fullName>
                </value>
                <value>
                    <fullName>Southern Financial</fullName>
                </value>
                <value>
                    <fullName>Focus Financial</fullName>
                </value>
                <value>
                    <fullName>Data Business Equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>