force-app/main/default/objects/SBQQ__Quote__c/fields/Increase_of_Total_Annualized_Commit_Fee__c.field-meta.xml
<CustomField>
        <fullName>Increase_of_Total_Annualized_Commit_Fee__c</fullName>
        <label>Increase of Total Annualized Commit Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>