force-app/main/default/objects/SBQQ__Quote__c/fields/Legacy_Product_Selection__c.field-meta.xml
<CustomField>
        <fullName>Legacy_Product_Selection__c</fullName>
        <formula>&quot;TRUE&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legacy Product Selection</label>
        <type>Text</type>
    </CustomField>